--- a/frontend/src/routes/app.css
+++ b/frontend/src/routes/app.css
@@ -12,6 +12,7 @@
 	--color-accent-dark: #2a9c99;
 	--color-neutral: #9bc1bc;
 	--color-text: #1a2927;
+	--shadow-color: rgba(47, 53, 46, 0.14);
 }
 html {
 	height: 100%;
@@ -31,4 +32,15 @@ body {
 
 * {
 	box-sizing: border-box;
+}
+
+.medium-shadow {
+	box-shadow:
+		var(--shadow-color) 0px 4px 12px,
+		var(--shadow-color) 1px 2px 10px;
+}
+
+.medium-shadow-filter {
+	filter: drop-shadow(var(--shadow-color) 0px 4px 12px)
+		drop-shadow(var(--shadow-color) 1px 2px 10px);
 }
